--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+    <img src="https://cloud.githubusercontent.com/assets/22620349/19084829/e6aafda0-8a1c-11e6-8722-df696ffdc91c.gif">
     <section class="page-header">
       <h1 class="project-name">Janhami.GitHub.io</h1>
       <h2 class="project-tagline">janhami site</h2>
