--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <img src="https://cloud.githubusercontent.com/assets/22620349/19084829/e6aafda0-8a1c-11e6-8722-df696ffdc91c.gif">
+    <img src="https://cloud.githubusercontent.com/assets/22620349/19085088/d36a5410-8a1d-11e6-9ee7-34376ca744f5.jpg">
     <section class="page-header">
       <h1 class="project-name">Janhami.GitHub.io</h1>
       <h2 class="project-tagline">janhami site</h2>
